--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -34,7 +34,7 @@
 @import 'translations';
 @import 'pagination';
 @import 'alerts';
-@import 'walkins';
+@import 'walk-ins';
 
 @import 'modules/hero-full';
 @import 'modules/hero-header';
