--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -34,6 +34,7 @@
 @import 'translations';
 @import 'pagination';
 @import 'alerts';
+@import 'timeline';
 
 @import 'modules/hero-full';
 @import 'modules/hero-header';
