--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_timeline.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_timeline.scss
@@ -57,7 +57,10 @@
       }
     }
     .month-label {
+      margin-top: -40px;
+      padding-top: 40px;
       @media only screen and (max-width: 750px) {
+        padding-top: 0px;
         margin: 5px 0px;
       }
       div {
