--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_timeline.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_timeline.scss
@@ -94,14 +94,16 @@
     }
   }
 }
-.month-link {
-  width: fit-content;
-  display: inline-block;
-  a {
-    padding-left: 0px;
-    font-size: 16px;
-    text-decoration: underline;
-    text-transform: uppercase;
+.menu {
+  .month-link {
+    width: fit-content;
+    display: inline-block;
+    a {
+      padding-left: 0px;
+      font-size: 16px;
+      text-decoration: underline;
+      text-transform: uppercase;
+    }
   }
   .pipe {
     padding-right: 1rem;
