--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -45,6 +45,7 @@
 @import 'modules/our-locations';
 @import 'modules/registration';
 
+@import 'pages/action-guide-v2';
 @import 'pages/departments';
 @import 'pages/documents';
 @import 'pages/event-spotlight';
