--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
@@ -1,3 +1,35 @@
+.action-guide-v2-tabs {
+  .step-label {
+    text-align: center;
+    &:not(.active) {
+      cursor: pointer;
+    }
+    i {
+      padding: 8px 0px;
+    }
+    .label-copy {
+      font-family: "Montserrat";
+      font-size: 18px;
+      letter-spacing: 0;
+      line-height: 22px;
+      text-decoration: underline;
+      max-width: 200px;
+      margin-left: auto;
+      margin-right: auto;
+      font-weight: 600;
+      margin-bottom: 16px;
+    }
+    .active-bar {
+      display: block;
+      height: 10px;
+    }
+    &.active {
+      background: none !important;
+      color: #444444;
+    }
+  }
+}
+
 .action-guide-v2 {
   display: none;
   &.active {
