--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
@@ -111,47 +111,65 @@
   }
 }
 
+.translations-container {
 
-.inline-list {
-  width: calc(100% - 85px);
-    li {
-      width: 10.7%;
-      padding: 1rem;
-      text-align: center;
-      &.active {
-        color: white;
-        font-weight: 600;
-        background: #444444;
-      }
-  }
-}
-
-.dropdown {
-  .dropdown-selector {
-    padding: 0px !important;
-    &:after {
-      border-color: #2C60AB transparent transparent !important;
+  .globe {
+    @media screen and (max-width: 768px) {
+      display: none;
     }
   }
-  .is-dropdown-submenu-parent {
-    padding: 6px;
-  }
-  .is-active {
-    .dropdown-selector {
-      &:after {
-        transform: rotate(180deg);
-      }
+  .inline-list {
+    width: calc(100% - (29px + 2rem));
+    @media screen and (max-width: 768px) {
+      width: 100%;
     }
-    .js-dropdown-active {
-      background: #f0f0f0;
-      margin-top: 20px;
-      margin-left: -137px;
       li {
-        width: 100%;
-        text-align: left;
         padding: 1rem;
-        a {
-          padding: 0px;
+        text-align: center;
+        @media screen and (min-width: 985px) {
+          width: 10.7%;
+        }
+        @media screen and (max-width: 768px) {
+          padding: 0.5rem;
+        }
+        &.active {
+          color: white;
+          font-weight: 600;
+          background: #444444;
+        }
+    }
+  }
+  
+  .dropdown {
+    .dropdown-selector {
+      padding: 0px !important;
+      &:after {
+        border-color: #2C60AB transparent transparent !important;
+      }
+    }
+    .is-dropdown-submenu-parent {
+      padding: 6px;
+    }
+    .is-active {
+      .dropdown-selector {
+        &:after {
+          transform: rotate(180deg);
+        }
+      }
+      .js-dropdown-active {
+        background: #f0f0f0;
+        margin-top: 20px;
+        margin-left: -137px;
+        li {
+          width: 100%;
+          text-align: left;
+          padding: 1rem;
+          @media screen and (max-width: 768px) {
+            padding: 0.5rem;
+          }
+          a {
+            padding: 0px;
+          }
         }
       }
     }
