--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
@@ -69,6 +69,12 @@
       }
     }
   }
+  .underline {
+    text-decoration: underline;
+  }
+  .anchor {
+    font-weight: 600;
+  }
 }
 
 .action-guide-v2-cta {
