--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base.scss
@@ -9,6 +9,7 @@
 @import 'swiftype';
 @import 'swiftype-autocomplete';
 
+@import 'links';
 @import 'a-z-list';
 @import 'accordion';
 @import 'button';
@@ -36,6 +37,7 @@
 @import 'alerts';
 @import 'timeline';
 @import 'walk-ins';
+
 
 @import 'modules/hero-full';
 @import 'modules/hero-header';
