displaying mobile/desktop conditionally

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
@@ -77,5 +77,16 @@
   }
 }
 
-.action-guide-v2-cta {
+
+
+.action-guide-v2-container-desktop {
+  @media screen and (max-width: 749px) {
+  display: none;
+  }
+}
+.action-guide-v2-container-mobile {
+  display: none;
+  @media screen and (max-width: 749px) {
+    display: block;
+    }
 }
