--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
@@ -99,3 +99,15 @@
     }
     }
 }
+
+.action-guide-v2-cta {
+  a {
+    @media screen and (max-width: 749px) {
+      float: none !important;
+      padding: 0px;
+    }
+    @media screen and (max-width: 450px) {
+      width: 100%;
+    }
+  }
+}
