--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
@@ -142,7 +142,7 @@
   
   .dropdown {
     .dropdown-selector {
-      padding: 0px !important;
+      padding: 0px 0px 0px 10px !important;
       &:after {
         border-color: #2C60AB transparent transparent !important;
       }
