--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
@@ -93,8 +93,21 @@
         .accordion-title {
           &:before {
             border-left: 5px solid white;
+            padding: 0.8rem 0.95rem;
           }
         } 
+        .accordion-content {
+          ul {
+            list-style-type: disc;
+          }
+        }
+        &.is-active {
+          .accordion-title {
+            &:before {
+              padding: 0.6rem 0.95rem 1rem 0.95rem !important;
+            }
+          }
+        }
       }
     }
     }
