--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
@@ -40,6 +40,13 @@
   &.active {
     display: block;
   }
+  &.content-action_guide {
+    .mbl {
+      ul {
+        line-height: 2.5rem;
+      }
+    }
+  }
 
   .tab-nav {
     color: #0F4D90;
