--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
@@ -117,13 +117,24 @@
     display: flex;
     flex-wrap: wrap;
     li {
-      padding: 1rem;
       text-align: center;
       flex: 1 0 10%;
+      a {
+        display: block;
+        padding: 1rem;
+      }
+      &:hover {
+        cursor: pointer;
+        background: color(dark-ben-franklin);
+        a {
+          color: #ffffff;
+        }
+      }
       &.active {
-        color: white;
+        padding: 1rem;
+        color: #ffffff;
         font-weight: 600;
-        background: #444444;
+        background: color(dark-gray);
       }
     }
   }
@@ -148,7 +159,7 @@
           }
         }
         .js-dropdown-active {
-          background: #f0f0f0;
+          background: color(ghost-gray);
           margin-top: 20px;
           margin-left: -149px;
           @media screen and (max-width: 660px) {
@@ -159,9 +170,16 @@
           li {
             width: 100%;
             text-align: center;
-            padding: 1rem;
             a {
-              padding: 0px;
+              line-height: 1.6;
+              padding: 1rem;
+            }
+            &:hover {
+              cursor: pointer;
+              background: color(dark-ben-franklin);
+              a {
+                color: #ffffff;
+              }
             }
           }
         }
