line height fix

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
@@ -42,8 +42,8 @@
   }
   &.content-action_guide {
     .mbl {
-      ul {
-        line-height: 2.5rem;
+      li {
+        margin-bottom: 1rem;
       }
     }
   }
