timeline in tabbed cotnent desktop

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
@@ -45,6 +45,11 @@
       li {
         margin-bottom: 1rem;
       }
+      .no-bullet {
+        li {
+          margin-bottom: 0px;
+        }
+      }
     }
   }
 
