handling less than 9 translations

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
@@ -137,6 +137,9 @@
         background: color(dark-gray);
       }
     }
+    &.no-dropdown {
+      width: calc(100% - 4rem);
+    }
   }
   .dropdown-container {
     width: auto;
