change cutoff and allow for less items

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
@@ -139,6 +139,11 @@
     }
     &.no-dropdown {
       width: calc(100% - 4rem);
+      li {
+        padding-left: 2rem;
+        padding-right: 2rem;
+        flex: none;
+      }
     }
   }
   .dropdown-container {
