--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_action-guide-v2.scss
@@ -1,10 +1,15 @@
 .action-guide-v2-tabs {
   .grid-x {
-    gap: 3px;
     .tab-label {
       flex: 1 0 10%;
       text-align: center;
       margin: 0px;
+      &:first-child {
+        margin-right: 3px;
+      }
+      &:last-child {
+        margin-left: 3px;
+      }
       &:not(.active) {
         cursor: pointer;
       }
