added add-columns shortcode

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_layout.scss
@@ -195,3 +195,14 @@ caption {
   padding: 1rem 0 0 0;
   font-weight: bold;
 }
+
+.column-content {
+  @media screen and (max-width: 425px) {
+    column-count: 1 !important;
+  }
+  ul {
+    li {
+      margin-bottom: 0px !important;
+    }
+  }
+}
