multi step fix, undelrine fixes

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_card.scss
@@ -125,8 +125,12 @@ a.card,
   }
   .card-description{
     font-weight: normal;
+    h3 {
+      text-decoration: none;
+    }
     p{
       color: color(dark-gray);
+      text-decoration: none;
     }
   }
   &.card-fixed-height{
