--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
@@ -60,6 +60,12 @@
       padding:0;
     }
   }
+  .arabic {
+    direction: rtl;
+    .month-label {
+      display: none;
+    }
+  }
 
 }
 @include breakpoint(small only) {
