last style touch

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
@@ -241,6 +241,9 @@
           padding: 0px;
           &.small-push-4 {
             padding: 0px 10px;
+            .valign-cell {
+              display: block;
+            }
           }
         }
       }
